/*
 * test_header_as_group.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2015-2019 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package com.apple.foundationdb.record.evolution.headergroup;

option java_package = "com.apple.foundationdb.record.evolution";
option java_outer_classname = "TestHeaderAsGroupProto";

import "record_metadata_options.proto";

// This is taken from test_records_with_header.proto but the header has become a group
message MyRecord {
    required group Header = 1 {
        required int64 rec_no = 1;
        required string path = 2;
        optional int32 num = 3;
    }
    optional string str_value = 2;
    repeated int64 repeated_int = 3;
}

message RecordTypeUnion {
    optional MyRecord _MyRecord = 1;
}
